--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         class="flex flex-col text-center md:flex-row items-center justify-between w-4/5 m-auto pt-10 gap-5"
       >
         <div class="logo">
-          <img src="icons/logo.png" alt="" class="m-auto w-4/5 md:m-0 md:w-4/4 "/>
+          <img src="icons/logo.png" alt="" class="m-auto w-4/5 md:m-0 md:w-4/4 lg:w-2/4 "/>
         </div>
 
         <div class="links">
